# Generic-Expression

./: .gitignore  Cargo.toml  Makefile  README.md  SettingsUI.ts  adapter.ts  authorAdapter.ts  build.sh  default.nix  dna.js  genericExpressionUI.ts  index.ts  package-lock.json  package.json  release.sh  rollup.config.js
.github/workflows/: main.yml
hc-dna/: Cargo.toml
hc-dna/workdir/: dna.yaml  shortform_dna.yaml
hc-dna/zomes/generic_expression/: Cargo.toml
hc-dna/zomes/generic_expression/src/: lib.rs  schema.rs
hc-dna/zomes/schema_validation/: Cargo.toml
hc-dna/zomes/schema_validation/src/: entries.rs  lib.rs  params.rs
hc-dna/zomes/tests/: package.json
hc-dna/zomes/tests/src/: common.ts  index.ts
hc-dna/zomes/tests/src/scenarios/: private-expression.ts  public-expression.ts
workdir/: dna.yaml
zomes/generic_expression/: Cargo.toml
zomes/generic_expression/src/: config.rs  constants.rs  entries.rs  lib.rs  params.rs  schema.rs  utils.rs
zomes/generic_expression_integrity/: Cargo.toml
zomes/generic_expression_integrity/src/: lib.rs
zomes/tests/: package-lock.json  package.json
zomes/tests/src/: common.ts  index.ts
zomes/tests/src/scenarios/: private-expression.ts  public-expression.ts
